@@ -1,3 +1,9 @@
+2005-09-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* flower/include/real.hh: include <math.h> iso. <cmath>
+
+	* flower/include/offset.hh: include real.hh
+
 2005-09-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* Documentation/user/changing-defaults.itely (Difficult tweaks):
